# ThermodynamicsSimulation

./: README.md
Cpp/: CMakeLists.txt  Container.cpp  Simulation.cpp  Simulation.h  main.cpp
Cpp-LJ/: Ball.cpp  CMakeLists.txt  main.cpp
Cpp-VDW/: Ball.h  CMakeLists.txt  Simulation.cpp  Simulation.h  main.cpp
Cpp-Vanilla/: Ball.cpp  CMakeLists.txt  Container.cpp  Container.h  Simulation.cpp  main.cpp
Cpp/include/LJ/: Ball.h  Container.h  Simulation.h
Cpp/include/VDW/: Ball.h  Container.h  Simulation.h
Cpp/include/Vanilla/: Ball.h  Container.h  Simulation.h
Cpp/src/LJ/: Ball.cpp  Container.cpp  Simulation.cpp  Simulation.h
Cpp/src/VDW/: Ball.cpp  Container.cpp  Simulation.cpp  Simulation.h
Cpp/src/Vanilla/: Ball.cpp  Container.cpp  Simulation.cpp  Simulation.h
Cpp/src/util/: Utils.cpp  Utils.h
CppAnalysis/: Analyser.py  CppSimulationDataAnalysis.ipynb  DataLoader.py
Python/tests/: test_fine_details.py
Python/thermosnooker/: __init__.py  analysis.py  balls.py  physics.py  simulations.py
VanDerWaals/tests/: test_code_quality.py  utils.py
Vanilla/tests/: conftest.py  test_tasks.py
